Stylings on the about page are starting. I'm really liking the idea so far

--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -10,7 +10,175 @@
 	</head>
 
 	<body>
-		<% include ./views/shared/nav %>
+		<% include ../shared/nav %>
+
+		<main class='about-page-container'>
+			<section class='about-header'>
+				<div class='about-header-image'></div>
+				<div class='about-header-overlay'>
+					<h1>Some Title Text</h1>
+				</div>
+			</section>
+
+			<section class='about-story'>
+				<div class='about-story-title'>
+					<div></div>
+					<h2>The story</h2>
+					<div></div>
+				</div>
+
+				<div class='about-story-text'>
+					<blockquote>
+						Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here
+						Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here
+					</blockquote>
+
+					<p>
+						Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here
+
+						<a href='/'>Blog link</a>
+					</p>
+				</div>
+			</section>
+
+			<section class='about-media'>
+				<div class='about-media-wrapper'>
+					<div class='about-media-text'>
+						<h3>Our Mission</h3>
+						<p> Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here</p>
+
+						<h3>Why Us?</h3>
+						<p>Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here</p>
+					</div>
+
+					<div class='about-media-video'>
+						<div class='media-play-button'>
+							<div></div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class='about-timeline'>
+				<div class='about-timeline-large'>
+					<div class='about-timeline-row-left'>
+						<div>
+							<div class='timeline-widget'></div>
+							<div class='timline-horizontal-line'></div>
+							<div class='timeline-marker'></div>
+							<div class='timeline-vertical-line'></div>
+						</div>
+					</div>
+
+					<div class='about-timeline-row-right'>
+						<div>
+							<div class='timeline-widget'></div>
+							<div class='timeline-horizontal-line'></div>
+							<div class='timeline-marker'></div>
+							<div class='timeline-vertical-line'></div>
+						</div>
+					</div>
+
+					<div class='about-timeline-row-left'>
+						<div>
+							<div class='timeline-widget'></div>
+							<div class='timline-horizontal-line'></div>
+							<div class='timeline-marker'></div>
+							<div class='timeline-vertical-line'></div>
+						</div>
+					</div>
+
+					<div class='about-timeline-row-right'>
+						<div>
+							<div class='timeline-widget'></div>
+							<div class='timeline-horizontal-line'></div>
+							<div class='timeline-marker'></div>
+							<div class='timeline-vertical-line'></div>
+						</div>
+					</div>
+
+					<div class='about-timeline-row-left'>
+						<div>
+							<div class='timeline-widget'></div>
+							<div class='timline-horizontal-line'></div>
+							<div class='timeline-marker'></div>
+							<div class='timeline-vertical-line'></div>
+						</div>
+					</div>
+
+					<div class='about-timeline-row-right'>
+						<div>
+							<div class='timeline-widget'></div>
+							<div class='timeline-horizontal-line'></div>
+							<div class='timeline-marker'></div>
+							<div class='timeline-vertical-line'></div>
+						</div>
+					</div>
+				</div>
+
+				<div class='about-timeline-small'>
+					<div>
+						<div class='timeline-marker'></div>
+						<div class='timeline-vertical-line'></div>
+						<div class='timeline-widget'></div>
+						<div class='timeline-vertical-line'></div>
+					</div>
+
+					<div>
+						<div class='timeline-marker'></div>
+						<div class='timeline-vertical-line'></div>
+						<div class='timeline-widget'></div>
+						<div class='timeline-vertical-line'></div>
+					</div>
+
+					<div>
+						<div class='timeline-marker'></div>
+						<div class='timeline-vertical-line'></div>
+						<div class='timeline-widget'></div>
+						<div class='timeline-vertical-line'></div>
+					</div>
+
+					<div>
+						<div class='timeline-marker'></div>
+						<div class='timeline-vertical-line'></div>
+						<div class='timeline-widget'></div>
+						<div class='timeline-vertical-line'></div>
+					</div>
+
+					<div>
+						<div class='timeline-marker'></div>
+						<div class='timeline-vertical-line'></div>
+						<div class='timeline-widget'></div>
+						<div class='timeline-vertical-line'></div>
+					</div>
+
+					<div>
+						<div class='timeline-marker'></div>
+						<div class='timeline-vertical-line'></div>
+						<div class='timeline-widget'></div>
+						<div class='timeline-vertical-line last'></div>
+					</div>
+				</div>
+			</section>
+
+			<section class='about-today'>
+				<h2>Where we are today</h2>
+
+				<div class='about-today-staff'>
+					<div class='staff'>
+						<div class='staff-image'></div>
+						<h4>Name</h4>
+						<p>Some text text text text text and stuff</p>
+					</div>
+
+					<div class='staff'>
+						<div class='staff-image'></div>
+						<h4>Name</h4>
+						<p>Some adjfhakjdfhakjdhf adskjfhsakdfh</p>
+					</div>
+				</div>
+			</section>
+		</main>
 
 		<script src='../index.js'></script>
 	</body>
