Added some more layout stylings for the about page. I might leave it to emily to do the themeing, not sure yet.

--- a/public/static/sass/views/pages/about/media.sass
+++ b/public/static/sass/views/pages/about/media.sass
@@ -78,3 +78,36 @@
 		> div
 			height: 80px
 			width: 80px
+
+@media screen and (min-width: 870px)
+	.about-media
+		padding: 90px 0
+
+	.about-media-wrapper
+		width: 70%
+
+	.about-media-text
+		margin-bottom: 85px
+
+	.media-play-button
+		> div
+			height: 95px
+			width: 95px
+
+@media screen and (min-width: 1200px)
+	.about-media
+		padding: 110px 0
+
+	.about-media-wrapper
+		flex-direction: row
+		align-items: flex-start
+		justify-content: space-between
+		width: 90%
+
+	.about-media-text
+		flex-basis: 45%
+		height: 500px
+
+	.about-media-video
+		flex-basis: 48%
+		height: 500px
