--- a/public/static/sass/views/pages/about/story.sass
+++ b/public/static/sass/views/pages/about/story.sass
@@ -50,10 +50,25 @@
 @media screen and (min-width: 640px)
 	.about-story
 		padding: 65px 0
-		
+
 	.about-story-text
 		padding-top: 65px
 		width: 80%
 
 		blockquote
 			line-height: 35px
+
+@media screen and (min-width: 870px)
+	.about-story
+		padding: 80px 0
+
+	.about-story-text
+		width: 80%
+
+
+@media screen and (min-width: 1200px)
+	.about-story
+		padding: 120px 0
+
+	.about-story-text
+		width: 65%
