--- a/public/static/sass/views/pages/about/timeline.sass
+++ b/public/static/sass/views/pages/about/timeline.sass
@@ -52,3 +52,30 @@
 		.timeline-widget
 			width: 75%
 			height: 280px
+
+@media screen and (min-width: 870px)
+	.about-timeline
+		padding: 95px 0
+
+	.about-timeline-small
+		.timeline-marker
+			height: 100px
+			width: 100px
+
+		.timeline-vertical-line
+			height: 90px
+
+		.timeline-widget
+			width: 65%
+			height: 340px
+
+@media screen and (min-width: 1200px)
+	.about-timeline-small
+
+		.timeline-vertical-line
+			height: 120px
+
+			
+		.timeline-widget
+			width: 55%
+			height: 370px
