--- a/public/static/sass/views/pages/about/today.sass
+++ b/public/static/sass/views/pages/about/today.sass
@@ -54,3 +54,16 @@
 
 	.staff-image
 		height: 260px
+
+@media screen and (min-width: 870px)
+	.about-today
+		padding: 90px 0
+
+		h2
+			margin-left: 27px
+
+	.staff
+		width: 65%
+
+	.staff-image
+		height: 300px
