--- a/public/static/sass/views/pages/about/today.sass
+++ b/public/static/sass/views/pages/about/today.sass
@@ -60,10 +60,19 @@
 		padding: 90px 0
 
 		h2
-			margin-left: 27px
+			margin-left: 50px
 
 	.staff
 		width: 65%
+
+		h4
+			font-size: 24px
+			letter-spacing: 3px
+			margin-bottom: 22px
+
+		p
+			font-size: 18px
+			letter-spacing: 2px
 
 	.staff-image
 		height: 300px
