--- a/public/views/about/about.ejs
+++ b/public/views/about/about.ejs
@@ -23,20 +23,17 @@
 			<section class='about-story'>
 				<div class='about-story-title'>
 					<div></div>
-					<h2>The story</h2>
+					<h2>The Story</h2>
 					<div></div>
 				</div>
 
 				<div class='about-story-text'>
 					<blockquote>
-						Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here
-						Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here
+						Evolution opened the doors to its first store over ten years ago. Since then, with the inumerable hours of work our dedicated employees have put in, we have been able to expand our business more than we had ever previously imagined. Since we have had so much help getting to where we are today, we wanted a chance to give something back to the ones who supported us the most -- the community.
 					</blockquote>
 
 					<p>
-						Some text about the business here Some text about the business here Some text about the business here Some text about the business here Some text about the business here
-
-						<a href='/'>Blog link</a>
+						As we have grown, we have learned that the most important thing about running a business is how much you value and respect your customers. With this in mind we are striving to provide new and old customers alike with access not only to quality products, but also deals, information, and a welcome environment. You can read more about this at <a href='/blog'>here on our blog</a>
 					</p>
 				</div>
 			</section>
@@ -64,7 +61,7 @@
 					<div class='about-timeline-row-left'>
 						<div>
 							<div class='timeline-widget'></div>
-							<div class='timline-horizontal-line'></div>
+							<div class='timeline-horizontal-line'></div>
 							<div class='timeline-marker'></div>
 							<div class='timeline-vertical-line'></div>
 						</div>
@@ -72,46 +69,41 @@
 
 					<div class='about-timeline-row-right'>
 						<div>
+							<div class='timeline-horizontal-line'></div>						
 							<div class='timeline-widget'></div>
-							<div class='timeline-horizontal-line'></div>
 							<div class='timeline-marker'></div>
-							<div class='timeline-vertical-line'></div>
 						</div>
 					</div>
 
 					<div class='about-timeline-row-left'>
 						<div>
 							<div class='timeline-widget'></div>
-							<div class='timline-horizontal-line'></div>
+							<div class='timeline-horizontal-line'></div>
 							<div class='timeline-marker'></div>
-							<div class='timeline-vertical-line'></div>
 						</div>
 					</div>
 
 					<div class='about-timeline-row-right'>
 						<div>
+							<div class='timeline-horizontal-line'></div>						
 							<div class='timeline-widget'></div>
-							<div class='timeline-horizontal-line'></div>
 							<div class='timeline-marker'></div>
-							<div class='timeline-vertical-line'></div>
 						</div>
 					</div>
 
 					<div class='about-timeline-row-left'>
 						<div>
 							<div class='timeline-widget'></div>
-							<div class='timline-horizontal-line'></div>
+							<div class='timeline-horizontal-line'></div>
 							<div class='timeline-marker'></div>
-							<div class='timeline-vertical-line'></div>
 						</div>
 					</div>
 
 					<div class='about-timeline-row-right'>
 						<div>
+							<div class='timeline-horizontal-line'></div>						
 							<div class='timeline-widget'></div>
-							<div class='timeline-horizontal-line'></div>
 							<div class='timeline-marker'></div>
-							<div class='timeline-vertical-line'></div>
 						</div>
 					</div>
 				</div>
