--- a/public/views/shared/offside.ejs
+++ b/public/views/shared/offside.ejs
@@ -17,25 +17,25 @@
 				</li>
 
 				<li>
-					<a href='/'>
+					<a href='/about'>
 						<p>About</p>
 					</a>
 				</li>
 
 				<li>
-					<a href='/'>
+					<a href='/shop'>
 						<p>Shop</p>
 					</a>
 				</li>
 
 				<li>
-					<a href='/'>
+					<a href='/contact'>
 						<p>Contact</p>
 					</a>
 				</li>
 
 				<li>
-					<a href='/'>
+					<a href='/news'>
 						<p>News</p>
 					</a>
 				</li>
