The about page 'wireframe' is done essentially. Contact page will be next

--- a/public/static/sass/views/pages/about/timeline.sass
+++ b/public/static/sass/views/pages/about/timeline.sass
@@ -111,6 +111,7 @@
 		.timeline-horizontal-line
 			width: calc(36% + 50px)
 			border-bottom: 1px solid rgba(0,0,0,0.12)
+			z-index: 1
 
 		.timeline-marker
 			position: absolute
@@ -167,7 +168,5 @@
 		.timeline-horizontal-line
 			width: calc(36% + 50px)
 			border-bottom: 1px solid rgba(0,0,0,0.12)
-
-
 
 
