--- a/public/static/sass/views/pages/about/today.sass
+++ b/public/static/sass/views/pages/about/today.sass
@@ -76,3 +76,13 @@
 
 	.staff-image
 		height: 300px
+
+@media screen and (min-width: 1350px)
+	.about-today-staff
+		flex-direction: row
+		justify-content: space-between
+		width: 75%
+		margin: 0 auto
+
+	.staff
+		flex-basis: 45%
