Wireframe for the contact page almost finished

--- a/public/static/sass/views/pages/about/timeline.sass
+++ b/public/static/sass/views/pages/about/timeline.sass
@@ -1,6 +1,7 @@
 .about-timeline
 	padding: 50px 0
 	border-bottom: 1px solid rgba(0,0,0,0.12)
+	overflow: hidden
 
 .about-timeline-large
 	display: none
