--- a/public/static/sass/views/pages/about/today.sass
+++ b/public/static/sass/views/pages/about/today.sass
@@ -1,5 +1,10 @@
 .about-today
+	display: flex
+	flex-direction:  column
+	position: relative
 	padding: 50px 0
+	z-index: 40
+	overflow: hidden
 
 	h2
 		@include lato()
