--- a/public/static/sass/views/pages/contact/form.sass
+++ b/public/static/sass/views/pages/contact/form.sass
@@ -1,13 +1,16 @@
 .contact-form-container
 	padding: 50px 0
+	background: rgba(19, 35, 47, 0.9)
 
 	p
 		@include lato()
-		font-weight: 300
+		font-weight: normal
 		font-size: 17px
-		letter-spacing: 2px
-		line-height: 24px
-		margin-left: 15px
+		line-height: 30px
+		width: 90%
+		margin: 0 auto
+		color: #fff
+		text-align: center
 
 .contact-form
 	width: 90%
@@ -16,7 +19,7 @@
 .form-wrapper
 	position: relative
 	width: 100%
-	margin-bottom: 42px
+	margin-bottom: 52px
 
 	input
 		position: relative
@@ -24,11 +27,12 @@
 		width: 100%
 		padding: 0
 		border: none
-		border-bottom: 1px solid rgba(0,0,0,0.23)
+		border-bottom: 1px solid #a0b3b0
 		@include lato()
 		font-weight: 300
 		letter-spacing: 2px
 		font-size: 17px
+		background: transparent
 		outline: none
 
 	label
@@ -39,6 +43,10 @@
 		font-weight: 300
 		font-size: 17px
 		letter-spacing: 2px
+		color: rgba(255, 255, 255, 0.5)
+
+		.req
+			color: #1aba88
 
 	textarea
 		position: relative
@@ -47,7 +55,8 @@
 		font-weight: 300
 		letter-spacing: 2px
 		font-size: 17px
-		border: 1px solid rgba(0,0,0,0.23)
+		border: 1px solid #a0b3b0
+		background: transparent
 		outline: none
 
 .form-submit
@@ -57,10 +66,11 @@
 	padding: 20px 0
 
 	button
-		height: 40px
-		width: 180px
-		background: none
-		background: #ccc
+		height: 50px
+		width: 200px
+		border: none
+		background: rgba(160, 179, 176, 0.247059)
+		pointer-events: none
 
 		span
 			@include lato()
@@ -68,6 +78,7 @@
 			letter-spacing: 2px
 			font-size: 16px
 			text-transform: uppercase
+			color: #a0b3b0
 
 @media screen and (min-width: 600px)
 	.contact-form-container
