--- a/public/static/sass/views/pages/contact/header.sass
+++ b/public/static/sass/views/pages/contact/header.sass
@@ -1,18 +1,33 @@
 .contact-header
+	position: relative
 	display: flex
 	flex-direction: column
 	align-items: center
 	justify-content: center
-	height: 200px
-	background: rgba(0,0,0,0.2)
+	height: 350px
+	width: 100%
 
+	img
+		height: 100%
+		width: 100%
+		max-width: 100%
 	h1
 		@include lato()
 		font-weight: 300
-		font-size: 42px
+		font-size: 48px
 		letter-spacing: 4px
-		line-height: 53px
+		line-height: 100px
+		margin-top: 75px
 		text-align: center
+		color: #fff
+
+.contact-header-overlay
+	position: absolute
+	top: 0
+	left: 0
+	height: 100%
+	width: 100%
+	background: rgba(0,0,0,0.5)
 
 @media screen and (min-width: 600px)
 	.contact-header
