--- a/public/static/sass/views/pages/contact/human.sass
+++ b/public/static/sass/views/pages/contact/human.sass
@@ -1,25 +1,27 @@
 .contact-human
 	display: flex
 	flex-direction: column
-	padding: 50px 0
-	border-bottom: 1px solid rgba(0,0,0,0.23)
+	padding: 90px 0
+	text-align: left
+	background: lighten(#c1bdba, 15%)
 
 	h2
 		@include lato()
-		font-weight: 400
-		font-size: 35px
-		letter-spacing: 3px
-		margin-left: 10px
-		margin-bottom: 20px
+		font-weight: 300
+		font-size: 32px
+		letter-spacing: 1px
+		margin-bottom: 55px
+		text-align: center
 
 	p
-		@include lato()
-		font-weight: 300
-		font-size: 16px
-		line-height: 27px
-		letter-spacing: 1px
-		margin-left: 20px
-		margin-bottom: 20px
+		@include open()
+		font-weight: normal
+		font-size: 15x
+		line-height: 32px
+		width: 90%
+		margin: 0 auto
+		text-align: center
+		color: #7d7d7d
 
 @media screen and (min-width: 600px)
 	.contact-human
