--- a/public/static/sass/views/pages/contact/maps.sass
+++ b/public/static/sass/views/pages/contact/maps.sass
@@ -3,16 +3,13 @@
 	flex-direction: column
 	align-items: center
 	justify-content: center
-	height: 250px
-	background: rgba(0,0,0,0.3)
+	height: 400px
 
-	h2
-		@include lato()
-		font-weight: 300
-		font-size: 32px
-		letter-spacing: 3px
-		line-height: 40px
-		text-align: center
+	img
+		height: 100%
+		width: 100%
+		max-width: 100%
+
 
 @media screen and (min-width: 820px)
 	.contact-maps
