--- a/public/views/contact/contact.ejs
+++ b/public/views/contact/contact.ejs
@@ -31,39 +31,69 @@
 				<p>Just checkout our locations below for each of their unique information</p>
 
 				<div class='location-wrapper'>
-					<figure class='contact-location'>
+					<figure class='contact-location test'>
 						<img src='../static/images/store1.png' alt='location 1 image'>
-						<div class='location-overlay'>
-							<h3>Location 1</h3>
-						</div>
+						<div class='location-overlay'></div>
+						<figcaption>
+							<h2>Location 1</h2>
+							<div>
+								<p>Address here</p>
+								<p>City, OK, Zip</p>
+								<p>111-111-1111</p>
+							</div>
+						</figcaption>
 					</figure>
 
 					<figure class='contact-location'>
 						<img src='../static/images/store2.png' alt='location 2 image'>
-						<div class='location-overlay'>
-							<h3>Location 2</h3>
-						</div>
+						<div class='location-overlay'></div>
+						<figcaption>
+							<h2>Location 2</h2>
+							<div>
+								<p>Address here</p>
+								<p>City, OK, Zip</p>
+								<p>222-222-2222</p>
+							</div>
+						</figcaption>
 					</figure>
 
 					<figure class='contact-location'>
 						<img src='../static/images/store3.png' alt='location 3 image'>
-						<div class='location-overlay'>
-							<h3>Location 3</h3>
-						</div>
+						<div class='location-overlay'></div>
+						<figcaption>
+							<h2>Location 3</h2>
+							<div>
+								<p>Address here</p>
+								<p>City, OK, Zip</p>
+								<p>222-222-2222</p>
+							</div>
+						</figcaption>
 					</figure>
 
 					<figure class='contact-location'>
 						<img src='../static/images/store4.png' alt='location 4 image'>
-						<div class='location-overlay'>
-							<h3>Location 4</h3>
-						</div>
+						<div class='location-overlay'></div>
+						<figcaption>
+							<h2>Location 4</h2>
+							<div>
+								<p>Address here</p>
+								<p>City, OK, Zip</p>
+								<p>222-222-2222</p>
+							</div>
+						</figcaption>
 					</figure>
 
 					<figure class='contact-location'>
 						<img src='../static/images/store5.png' alt='location 5 image'>
-						<div class='location-overlay'>
-							<h3>Location 5</h3>
-						</div>
+						<div class='location-overlay'></div>
+						<figcaption>
+							<h2>Location 2</h2>
+							<div>
+								<p>Address here</p>
+								<p>City, OK, Zip</p>
+								<p>222-222-2222</p>
+							</div>
+						</figcaption>
 					</figure>
 				</div>
 			</section>
