--- a/public/static/sass/views/pages/contact/header.sass
+++ b/public/static/sass/views/pages/contact/header.sass
@@ -1,9 +1,5 @@
 .contact-header
 	position: relative
-	display: flex
-	flex-direction: column
-	align-items: center
-	justify-content: center
 	height: 350px
 	width: 100%
 
@@ -31,7 +27,17 @@
 
 @media screen and (min-width: 600px)
 	.contact-header
-		height: 300px
+		height: 380px
+
+	.contact-header-overlay
+		display: flex
+		flex-direction: column
+		align-items: center
+		justify-content: center
+
+		h1
+			margin-top: 0
+			line-height: 60px
 
 
 
