--- a/public/static/sass/views/pages/contact/human.sass
+++ b/public/static/sass/views/pages/contact/human.sass
@@ -25,14 +25,13 @@
 
 @media screen and (min-width: 600px)
 	.contact-human
-		padding: 75px 0
+		padding: 115px 0
 
 		h2
-			margin-left: 36px
+			font-size: 35px
 
 		p
-			margin-left: 35px
-			margin-bottom: 32px
+			font-size: 16px
 
 @media screen and (min-width: 820px)
 	.contact-human
