--- a/public/static/sass/views/pages/contact/locations.sass
+++ b/public/static/sass/views/pages/contact/locations.sass
@@ -1,62 +1,122 @@
 .contact-locations
-	padding: 50px 0
+	padding: 90px 0
 	border-bottom: 1px solid rgba(0,0,0,0.23)
-	h2
+
+	> h2
 		@include lato()
 		font-weight: 300
 		font-size: 32px
-		letter-spacing: 4px
-		margin-left: 10px
-		margin-bottom: 20px
+		line-height: 44px
+		letter-spacing: 1px
+		margin-bottom: 55px
+		text-align: center
 
-	p
-		@include lato()
-		font-weight: 300
-		font-size: 16px
-		line-height: 24px
-		letter-spacing: 2px
-		margin-left: 15px
-		margin-bottom: 25px
+	> p
+		@include open()
+		font-weight: normal
+		font-size: 15px
+		line-height: 32px
+		width: 90%
+		margin: 0 auto
+		text-align: center
+		color: #7d7d7d
+
+.location-wrapper
+	padding-top: 100px
 
 .contact-location
 	position: relative
 	height: 220px
 	width: 85%
 	margin: 0 auto 30px auto
-	background: rgba(0,0,0,0.23)
+
 
 	img
+		position: relative
 		height: 100%
 		width: 100%
 		max-width: 100%
+		opacity: 0.9
+		transition: opacity 0.35s ease-out
+
+	figcaption
+		display: flex
+		flex-direction: column
+		align-items: center
+		position: absolute
+		top: 0
+		left: 0
+		height: 100%
+		width: 100%
+		padding-top: 25%
+
+		&:before
+			position: absolute
+			top: 30px
+			left: 30px
+			right: 30px
+			bottom: 30px
+			content: ''
+			border: 2px solid #fff
+			opacity: 0
+			box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.4)
+			transition: opacity 0.35s ease-out, transform 0.35s ease-out
+			transform: scale3d(1.4, 1.4, 1)
+
+		h2
+			@include lato()
+			font-weight: 300
+			letter-spacing: 1px
+			font-size: 24px
+			color: #fff
+			transition: transform 0.35s ease-out
+
+		div
+			opacity: 0
+			margin-top: -20px
+			transition: opacity 0.35s ease-out, transform 0.35s ease-out
+			transform: scale(1.5)
+
+			p
+				@include open()
+				font-weight: normal
+				font-size: 16px
+				line-height: 28px
+				color: #fff
+				text-align: center
+
+	&:hover
+		figcaption
+			background-color: transparent
+
+			&:before,
+			div
+				opacity: 1
+				transform: scale3d(1, 1, 1)
+
+			h2
+				transform: scale(0.9) translateY(-40px)
+
+		img
+			opacity: 0.6
 
 .location-overlay
-	display: flex
-	align-items: center
-	justify-content: center
 	position: absolute
 	top: 0
 	left: 0
 	width: 100%
 	height: 100%
-	background: rgba(0,0,0,0.3)
-
-	h3
-		@include lato()
-		font-weight: 300
-		font-size: 22px
-		letter-spacing: 2px
-		color: #fff
+	background: rgba(0,0,0,0.25)
 
 @media screen and (min-width: 600px)
 	.contact-locations
-		padding: 75px 0
+		padding: 115px 0
 
 		h2
-			margin-left: 36px
+			font-size: 36px
 
 		p
-			margin-left: 35px
+			font-size: 16px
 
 	.contact-location
 		width: 80%
