All the small and medium-small view ports accounted for on contact page

--- a/public/static/sass/views/pages/contact/form.sass
+++ b/public/static/sass/views/pages/contact/form.sass
@@ -93,3 +93,32 @@
 		width: 85%
 		margin-top: 85px
 
+@media screen and (min-width: 820px)
+	.contact-form-container
+		p
+			width: 70%
+			line-height: 38px
+
+@media screen and (min-width: 1000px)
+	.contact-form-container
+		p
+			font-size: 18px
+			line-height: 43px
+			letter-spacing: 2px
+			width: 55%
+
+	.contact-form
+		width: 70%
+
+	.form-wrapper
+		margin-bottom: 72px
+
+		&:nth-of-type(4)
+			margin-bottom: 98px
+
+@media screen and (min-width: 1200px)
+	.contact-form-container
+		padding: 135px 0
+
+	.contact-form
+		margin-top: 120px
