--- a/public/static/sass/views/pages/contact/header.sass
+++ b/public/static/sass/views/pages/contact/header.sass
@@ -39,5 +39,23 @@
 			margin-top: 0
 			line-height: 60px
 
+@media screen and (min-width: 1000px)
+	.contact-header
+		height: 460px
+
+	.contact-header-overlay
+		h1
+			font-size: 54px
+			letter-spacing: 5px
+
+@media screen and (min-width: 1200px)
+	.contact-header
+		height: 490px
+
+	.contact-header-overlay
+		h1
+			font-size: 56px
+
+
 
 
