--- a/public/static/sass/views/pages/contact/human.sass
+++ b/public/static/sass/views/pages/contact/human.sass
@@ -38,3 +38,24 @@
 		p
 			line-height: 35px
 			width: 85%
+
+@media screen and (min-width: 1000px)
+	.contact-human
+		h2
+			font-size: 38px
+
+		p
+			font-size: 18px
+
+@media screen and (min-width: 1200px)
+	.contact-human
+		padding: 135px 0
+
+		h2
+			font-size: 40px
+			margin-bottom: 70px
+
+		p
+			font-size: 19px
+			line-height: 38px
+			width: 80%
