--- a/public/static/sass/views/pages/contact/maps.sass
+++ b/public/static/sass/views/pages/contact/maps.sass
@@ -14,3 +14,8 @@
 @media screen and (min-width: 820px)
 	.contact-maps
 		height: 320px
+
+
+@media screen and (min-width: 1000px)
+	.contact-maps
+		height: 420px
