All the medium view port sizes for contact page are done

--- a/public/static/sass/views/pages/contact/form.sass
+++ b/public/static/sass/views/pages/contact/form.sass
@@ -122,3 +122,30 @@
 
 	.contact-form
 		margin-top: 120px
+
+@media screen and (min-width: 1400px)
+	.contact-form
+		width: 60%
+
+	.form-submit
+		padding: 40px 0
+
+		button
+			height: 65px
+			width: 280px
+
+			span
+				font-size: 19px
+				letter-spacing: 3px
+
+@media screen and (min-width: 1400px)
+	.contact-form-container
+		padding: 150px 0
+
+		p
+			font-size: 20px
+			width: 40%
+			line-height: 48px
+
+	.contact-form
+		margin-top: 160px
