--- a/public/static/sass/views/pages/contact/human.sass
+++ b/public/static/sass/views/pages/contact/human.sass
@@ -16,7 +16,7 @@
 	p
 		@include open()
 		font-weight: normal
-		font-size: 15x
+		font-size: 15px
 		line-height: 32px
 		width: 90%
 		margin: 0 auto
@@ -59,3 +59,28 @@
 			font-size: 19px
 			line-height: 38px
 			width: 80%
+
+@media screen and (min-width: 1400px)
+	.contact-human
+		pading: 150px 0
+
+		h2
+			font-size: 42px
+
+		p
+			width: 70%
+			line-height: 43px
+
+@media screen and (min-width: 1600px)
+	.contact-human
+		padding: 180px 0
+
+		h2
+			font-size: 45px
+			letter-spacing: 3px
+			margin-bottom: 85px
+
+		p
+			width: 60%
+			font-size: 20px
+			line-height: 46px
