--- a/public/static/sass/views/pages/contact/maps.sass
+++ b/public/static/sass/views/pages/contact/maps.sass
@@ -19,3 +19,11 @@
 @media screen and (min-width: 1000px)
 	.contact-maps
 		height: 420px
+
+@media screen and (min-width: 1400px)
+	.contact-maps
+		height: 460px
+
+@media screen and (min-width: 1600px)
+	.contact-maps
+		height: 500px
