--- a/public/views/contact/contact.ejs
+++ b/public/views/contact/contact.ejs
@@ -28,7 +28,7 @@
 
 			<section class='contact-locations'>
 				<h2>How do you get a hold of us?</h2>
-				<p>Just checkout our locations below for each of their unique information</p>
+				<p>Below you can find the information to get in contact with any one of our five stores. If that doesn't suit your fancy, keep scrolling!</p>
 
 				<div class='location-wrapper'>
 					<figure class='contact-location test'>
