--- a/public/static/sass/views/pages/contact/header.sass
+++ b/public/static/sass/views/pages/contact/header.sass
@@ -56,6 +56,20 @@
 		h1
 			font-size: 56px
 
+@media screen and (min-width: 1400px)
+	.contact-header
+		height: 540px
+
+		h1
+			font-size: 58px
+
+@media screen and (min-width: 1600px)
+	.contact-header
+		height: 580px
+
+		h1
+			font-size: 62px
+
 
 
 
