Normal viewport sizes done. I might do one more larger viewport > 2000

--- a/public/static/sass/views/pages/contact/form.sass
+++ b/public/static/sass/views/pages/contact/form.sass
@@ -138,7 +138,7 @@
 				font-size: 19px
 				letter-spacing: 3px
 
-@media screen and (min-width: 1400px)
+@media screen and (min-width: 1600px)
 	.contact-form-container
 		padding: 150px 0
 
@@ -149,3 +149,27 @@
 
 	.contact-form
 		margin-top: 160px
+
+@media screen and (min-width: 1800px)
+	.contact-form-container
+		padding-top: 180px
+		padding-bottom: 120px
+
+	.contact-form
+		width: 50%
+
+	.form-wrapper
+		label
+			font-size: 22px
+			top: 10
+
+	.form-submit
+		pading-top: 85px
+
+		button
+			height: 75px
+			width: 320px
+
+			span
+				font-size: 25px
+				letter-spacing: 5px
