--- a/public/static/sass/views/pages/contact/human.sass
+++ b/public/static/sass/views/pages/contact/human.sass
@@ -84,3 +84,7 @@
 			width: 60%
 			font-size: 20px
 			line-height: 46px
+
+@media screen and (min-width: 1800px)
+	.contact-human
+		padding: 120px 0
