--- a/public/static/sass/views/pages/contact/maps.sass
+++ b/public/static/sass/views/pages/contact/maps.sass
@@ -27,3 +27,7 @@
 @media screen and (min-width: 1600px)
 	.contact-maps
 		height: 500px
+
+@media screen and (min-width: 1800px)
+	.contact-maps
+		height: 650px
