--- a/public/static/sass/views/pages/contact/header.sass
+++ b/public/static/sass/views/pages/contact/header.sass
@@ -70,6 +70,13 @@
 		h1
 			font-size: 62px
 
+@media screen and (min-width: 1800px)
+	.contact-header
+		height: 750px
+
+		h1
+			font-size: 70px
+
 
 
 
