--- a/public/static/sass/views/pages/contact/locations.sass
+++ b/public/static/sass/views/pages/contact/locations.sass
@@ -238,4 +238,22 @@
 			figcaption
 				padding-top: 32%
 
+@media screen and (min-width: 1800px)
+	.contact-location
+		width: 20%
+
+		figcaption
+			padding-top: 37%
+
+			div
+				p
+					font-size: 18px
+
+		&:nth-of-type(4),
+		&:nth-of-type(5)
+			width: 20%
+
+			figcaption
+				padding-top: 37%
+
 
