Added some more responsive footer stylings

--- a/public/views/shared/footer.ejs
+++ b/public/views/shared/footer.ejs
@@ -27,6 +27,6 @@
 	</div>
 
 	<div class='footer-copyright'>
-		<p>&copy;2017 -- Evoltuion <span> All Rights Reserved</span></p>
+		<p>&copy;2017 -- Evolution <span> All Rights Reserved</span></p>
 	</div>
 </footer>
