--- a/public/static/sass/views/shared/footer.sass
+++ b/public/static/sass/views/shared/footer.sass
@@ -23,7 +23,7 @@
 	display: flex
 	flex-direction: column
 	align-items: center
-	padding: 30px 0
+	padding-top: 45px
 	z-index: 35
 
 .footer-links
@@ -35,10 +35,9 @@
 		text-decoration: none
 		margin-right: 10px
 		color: #909ea8
-		@include lato
-		font-weight: 300
-		letter-spacing: 1px
-		font-size: 16px
+		@include open
+		font-weight: normal
+		font-size: 18px
 		cursor: pointer
 		transition: color .3s ease-out
 
@@ -50,16 +49,16 @@
 	display: flex
 	align-items: center
 	justify-content: space-around
-	width: 50%
-	padding: 15px 0
+	width: 65%
+	padding-top: 25px
 
 	a
 		display: flex
 		align-items: center
 		justify-content: center
 		text-decoration: none
-		height: 35px
-		width: 35px
+		height: 45px
+		width: 45px
 		border-radius: 40px
 		box-shadow: 0 0 0 3px #909ea8
 		cursor: pointer
@@ -77,14 +76,14 @@
 
 .footer-copyright
 	position: relative
-	padding: 15px 0
+	padding-top: 45px
+	padding-bottom: 60px
 	z-index: 35
 
 	p
-		@include lato()
-		font-weight: 300
-		letter-spacing: 1px
-		font-size: 16px
+		@include open()
+		font-weight: normal
+		font-size: 17px
 		color: #d3d3d4
 		text-align: center
 
@@ -96,8 +95,36 @@
 
 @media screen and (min-width: 640px)
 	.footer-links
+		padding-top: 23px
+
 		a
+			font-size: 20px
+			margin-right: 28px
+
+	.footer-social
+		padding-top: 33px
+		width: 55%
+
+		a
+			height: 55px
+			width: 55px
+
+			span
+				font-size: 19px
+
+	.footer-copyright
+		padding-top: 70px
+		padding-bottom: 55px
+
+		p
 			font-size: 18px
+
+			span
+				font-size: 17px
+
+@media screen and (min-width: 800px)
+	.footer-social
+		width: 45%
 
 @media screen and (min-width: 1024px)
 	.footer-content
@@ -108,14 +135,26 @@
 
 	.footer-links
 		flex: 1
+		padding: 20px 0
 
 	.footer-social
 		flex: 1
 		justify-content: flex-end
+		padding: 20px 0
 
 		a
 			margin-right: 20px
 
 	.footer-copyright
-		padding-top: 8px
-		padding-bottom: 20px
+		padding-top: 20px
+		padding-bottom: 45px
+
+@media screen and (min-width: 1800px)
+	.footer-links
+		a
+			font-size: 22px
+			margin-right: 35px
+
+	.footer-social
+		a
+			margin-right: 35px
