--- a/public/index.ejs
+++ b/public/index.ejs
@@ -22,6 +22,6 @@
 
 		<% include ./views/shared/footer %>
 
-		<script src='./scripts/index.min.js'></script>
+		<script src='./index.js'></script>
 	</body>
 </html>
