--- a/public/static/sass/views/pages/contact/form.sass
+++ b/public/static/sass/views/pages/contact/form.sass
@@ -36,6 +36,11 @@
 		background: transparent
 		outline: none
 
+		&:focus
+			& ~ .bar:before,
+			& ~ .bar:after
+				width: 50%
+
 	label
 		position: absolute
 		top: 13px
@@ -45,9 +50,31 @@
 		font-size: 17px
 		letter-spacing: 2px
 		color: rgba(255, 255, 255, 0.5)
+		transition: all .4s ease-out
 
 		.req
 			color: #1aba88
+
+	.bar
+		position: relative
+		display: block
+		width: 100%
+
+		&:before,
+		&:after
+			content: ''
+			position: absolute
+			bottom: 1px
+			width: 0
+			height: 1px
+			background: #1aba88
+			transition: all .4s ease
+
+		&:before
+			left: 50%
+
+		&:after
+			right: 50%
 
 	textarea
 		position: relative
@@ -59,6 +86,7 @@
 		border: 1px solid #a0b3b0
 		background: transparent
 		outline: none
+
 
 .form-submit
 	display: flex
