--- a/public/views/contact/contact.ejs
+++ b/public/views/contact/contact.ejs
@@ -104,6 +104,8 @@
 				<form name='contact-form' class='contact-form'>
 					<div class='form-wrapper'>
 						<input type='text' name='name' id='contact-name'>
+						<span class='highlight'></span>
+						<span class='bar'></span>
 						<label for='contact-name'>Name<span class='req'>*</span>
 						</label>
 					</div>
