--- a/public/views/contact/contact.ejs
+++ b/public/views/contact/contact.ejs
@@ -112,17 +112,20 @@
 
 					<div class='form-wrapper form-email-wrapper'>
 						<input type='email' name='email' id='contact-email'>
+						<span class='bar'></span>
 						<label for='contact-email'>Email<span class='req'>*</span>
 						</label>
 					</div>
 
 					<div class='form-wrapper'>
 						<input type='text' name='subject' id='contact-subject'>
+						<span class='bar'></span>
 						<label for='contact-subject'>Subject</label>
 					</div>
 
 					<div class='form-wrapper form-phone-wrapper'>
 						<input type='phone' name='phone' id='contact-phone'>
+						<span class='bar'></span>
 						<label for='contact-phone'>Phone</label>
 					</div>
 
