--- a/public/views/contact/contact.ejs
+++ b/public/views/contact/contact.ejs
@@ -136,7 +136,7 @@
 					</div>
 
 					<div class='form-submit'>
-						<button type='button' id='contact-submit' aria-label='submit the message form'>
+						<button type='button' id='contact-submit' aria-label='submit the message form' class='form-submit'>
 							<span>Deliver</span>
 						</button>
 					</div>
